--- a/deploy/crds/alm.yaml
+++ b/deploy/crds/alm.yaml
@@ -6,7 +6,7 @@ spec:
   secure: true
   springCloudConfigLabel: master
   springProfilesActive: ""
-  deploymentType: Dev
+  deploymentType: Middle
   dockerRepo: nexus.accanto.com:5000
   release: http://10.220.217.248:8086/accanto/lm-operator-releases/raw/master/2.1.0-alpha-2633.yaml
   configurator:
